--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
   - node_modules
 script:
-  - npm install && npm run build
+  - cd app/ && npm install && npm run build
 after_failure: cat /home/travis/.npm/_logs/*-debug.log
 warnings_are_errors: false
 env:
