Added paginator at bottom of "glance" view & addtional token statistics
You can now see who has matched with which token and how many tests were
matched.

--- a/app/package.json
+++ b/app/package.json
@@ -24,14 +24,10 @@
     },
     "browserslist": {
         "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
+            "firefox >= 68"
         ],
         "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
+            "firefox >= 68"
         ]
     }
 }
