--- a/app/package.json
+++ b/app/package.json
@@ -6,10 +6,11 @@
         "@trendmicro/react-paginations": "^0.6.1",
         "classnames": "^2.2.6",
         "deserialize-json-api": "^1.2.1",
+        "file-saver": "^2.0.2",
         "react": "^16.12.0",
         "react-app-rewired": "^2.1.5",
         "react-dom": "^16.12.0",
-        "react-scripts": "3.2.0"
+        "react-scripts": "^3.4.1"
     },
     "scripts": {
         "start": "PORT=8123 react-app-rewired start",
